[gd_scene load_steps=5 format=3 uid="uid://h5dbpywiwktr"]

[ext_resource type="Script" path="res://Scenes/Stages/grid_container.gd" id="1_iyl6b"]
[ext_resource type="Texture2D" uid="uid://dkiexskwwtt2d" path="res://Assets/PlaceHolders/hadoken.png" id="1_jt3s1"]
[ext_resource type="AudioStream" uid="uid://4rr7p1ang0k" path="res://Assets/SFX/UI/SelectCharacter.wav" id="3_gyvyi"]
[ext_resource type="AudioStream" uid="uid://cpue4qlh3n0r0" path="res://Assets/SFX/UI/MenuSelect.mp3" id="4_8ix2s"]

[node name="CharacterSelectionScreen" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_iyl6b")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1575.0
offset_top = 383.333
offset_right = -1063.0
offset_bottom = 895.333
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_jt3s1")

[node name="Position" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -1583.33
offset_top = -883.333
offset_right = -1543.33
offset_bottom = -843.333

[node name="PositionDown" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -1583.33
offset_top = 563.333
offset_right = -1543.33
offset_bottom = 603.333

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -772.0
offset_top = -514.0
offset_right = 772.0
offset_bottom = 514.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 3
metadata/_edit_use_anchors_ = true

[node name="TextureRect1" type="TextureRect" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource("1_jt3s1")

[node name="TextureRect2" type="TextureRect" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource("1_jt3s1")

[node name="TextureRect3" type="TextureRect" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource("1_jt3s1")

[node name="TextureRect4" type="TextureRect" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource("1_jt3s1")

[node name="TextureRect5" type="TextureRect" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource("1_jt3s1")

[node name="TextureRect6" type="TextureRect" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource("1_jt3s1")

[node name="SelectCharacter" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_gyvyi")

[node name="MenuSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_8ix2s")
volume_db = -11.243
